--- a/angular-app/my-first-app/tsconfig.json
+++ b/angular-app/my-first-app/tsconfig.json
@@ -14,6 +14,9 @@
     "lib": [
       "es2018",
       "dom"
+    ],
+    "plugins": [
+      { "name": "typescript-tslint-plugin" }
     ]
   },
   "angularCompilerOptions": {
